# corust-hackathon

./: .gitignore  Cargo.toml  README.md  template.md
arc_swap_usage/: Cargo.toml
arc_swap_usage/src/: lib.rs
async_fn_in_traits/: Cargo.toml  README.md
async_fn_in_traits/src/: lib.rs
better_clap_version/: Cargo.toml  build.rs
better_clap_version/src/: main.rs
dependency_injection/: Cargo.toml
dependency_injection/src/: lib.rs
doc_cfg/: Cargo.toml  README.md
doc_cfg/src/: lib.rs
dummy_random_data/: Cargo.toml
dummy_random_data/src/: lib.rs
explicitly_borrow_within_an_implicitly_borrowing_pattern/: Cargo.toml
explicitly_borrow_within_an_implicitly_borrowing_pattern/src/: lib.rs
fake_variadic/: Cargo.toml  README.md
fake_variadic/src/: lib.rs
find_zombie_thread_with_loom/: Cargo.toml  README.md
find_zombie_thread_with_loom/src/: lib.rs
get_default/: Cargo.toml  README.md
get_default/src/: lib.rs
hashmap_but_key_ref_to_value/: Cargo.toml
hashmap_but_key_ref_to_value/src/: lib.rs
impl_trait_for_tuple/: Cargo.toml
impl_trait_for_tuple/src/: lib.rs
incorrect_clone_derived/: Cargo.toml  README.md
incorrect_clone_derived/src/: lib.rs
let_target_type_drive_hrtb/: Cargo.toml  README.md
let_target_type_drive_hrtb/src/: lib.rs
limit_the_concurrency_of_async_tasks/: Cargo.toml  README.md
limit_the_concurrency_of_async_tasks/src/: lib.rs
objc2_screen_capture_kit_delegate_never_called/: Cargo.toml  README.md
objc2_screen_capture_kit_delegate_never_called/src/: main.rs
objc2_screen_capture_kit_incorrect_frame_width/: Cargo.toml  README.md
objc2_screen_capture_kit_incorrect_frame_width/src/: lib.rs
parameter_injection/: Cargo.toml  README.md
parameter_injection/src/: lib.rs
preview_doc/: Cargo.toml  README.md
preview_doc/examples/: foo.rs
preview_doc/src/: lib.rs
proc_macro_example/: Cargo.toml  README.md
sqlx_pg_bug_leading_by_cached_prepared_statement/: Cargo.toml
sqlx_share_connection_between_tests/: README.md
sqlx_share_connection_in_test/: Cargo.toml  README.md
tailing_file/: Cargo.toml  README.md
task_manager/: Cargo.toml
task_manager/src/: lib.rs
tauri_state_not_drop_bug/: Cargo.toml  README.md
(+8 files in other folders)
