[workspace]
members = [
    "arc_swap_usage",
    "async_fn_in_traits",
    "better_clap_version",
    "parameter_injection",
    "get_default",
    "hashmap_but_key_ref_to_value",
    "impl_trait_for_tuple",
    "task_manager",
    "tauri_state_not_drop_bug",
    "proc_macro_example",
    "dummy_random_data",
    "let_target_type_drive_hrtb",
    "limit_the_concurrency_of_async_tasks",
    "sqlx_pg_bug_leading_by_cached_prepared_statement",
]
resolver = "3"
