[package]
name = "objc2_screen_capture_kit_delegate_never_called"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
block2 = "0.6.2"
crossbeam-utils = "0.8.21"
objc2 = "0.6.3"
objc2-core-media = "0.3.2"
objc2-foundation = "0.3.2"
objc2-screen-capture-kit = "0.3.2"

[features]
default = []
incorrect = []
