[package]
name = "objc2_screen_capture_kit_incorrect_frame_width"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5.15"
objc2 = "0.6.3"
objc2-core-media = "0.3.2"
objc2-core-video = "0.3.2"
objc2-foundation = "0.3.2"
objc2-screen-capture-kit = "0.3.2"
parking_lot = "0.12.5"

[features]
default = []
incorrect = []
